--- a/BMICalculator.html
+++ b/BMICalculator.html
@@ -6,6 +6,8 @@
     <title>BMI Calculator</title>
 </head>
 <body>
+    <font color="pink"> <h1> BMI Calculator </h1> </font>
+    <font color="turquoise"> <p> Calculate a BMI of 1.69m 65kg </p> </font>
     <script>
         let calculateBmi = (height, weight) => { const bmi = weight / (height * height)
         if (bmi < 18.5) {
@@ -21,4 +23,4 @@
 </body>
 </html>
 
-// http://localhost:5500/
+<!-- // http://localhost:5500/
